# blender-tpms

./: README.md  __init__.py  material.py  properties.py  pyproject.toml  ruff.toml  surfaces.py  tpms.blend  tpms.py  ui.py
.github/workflows/: build-and-test.yml
assets/: lattice.blend  tpms.blend
src/blender_tpms/: __init__.py  interface.py  material.py  properties.py  ui.py
src/blender_tpms/tpms/: __init__.py  surfaces.py  tpms.py
tests/: test_interface.py  test_operators.py  test_surfaces.py  test_tpms.py
