[project]
name = "blender_tpms"
version = "0.1.0"
description = "TPMS lib for Blender-TPMS addon."
authors = [{ name = "Kevin Marchais", email = "kevin.marchais@hivelix.io" }]
dependencies = ["pyvista"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/blender_tpms"]
